Finished the profile editing page. Spent a long time but couldn't solve the problem of additional page width. Specifically, the page now scrolls horizontally, and the additional width is exactly the same as the width of the sidebar. Also, the main content wrapper's right margin is not showing.

--- a/public/kanbas/styles/accountNav.css
+++ b/public/kanbas/styles/accountNav.css
@@ -1,6 +1,6 @@
 #kanbas-navbar {
     width: 85px !important;
-    min-height: 100vh;
+    min-height: max(100vh, 100%);
 }
 
 #kanbas-navbar ul {
